fixed broadcasting documentation
